--- a/mod2-solution/css/styles.css
+++ b/mod2-solution/css/styles.css
@@ -30,7 +30,7 @@ p {
 
 section {
 	border:	1px solid black;
-	background-color: #00FF99;
+	background-color: #929c98;
 	width: 100%;
 	height: 200px;
 	font-family: Helvetica;
@@ -50,7 +50,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFFF00;
+	background-color: #f099dc;
 }
 
 #beef {
@@ -64,7 +64,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FF1439;
+	background-color: #f03c32;
 }
 
 #sushi {
@@ -77,7 +77,7 @@ section {
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
-	background-color: #6495ED;
+	background-color: #ededa8;
 	color: white;
 	padding: 5px;
 }
